<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="email">Email giriniz</string>
    <string name="password">Paswword Giriniz</string>
    <string name="giris">Giriş Yap</string>
    <string name="yenikayıt">Yeni Kayıt Oluştur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baslık">Başlık Giriniz</string>
    <string name="yer">Yer Giriniz</string>
    <string name="note">Note Giriniz</string>
    <string name="resim">Resime tıklayarak Resim Seçiniz</string>
    <string name="Ekle">Ekle</string>
</resources>